Fix browse item row width on smallest mobile

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -176,7 +176,7 @@
 }
 
 @utility home-content-area {
-  @apply content-area max-w-[80%];
+  @apply content-area max-w-screen sm:max-w-[80%];
 }
 
 @utility header-x-padding {
